Load templates from resources

BUG: 425333